--- a/week3/package.json
+++ b/week3/package.json
@@ -5,12 +5,13 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "uuid": "^8.1.0"
   },
   "devDependencies": {},
+  "keywords": [],
   "description": ""
 }
