--- a/week3/package.json
+++ b/week3/package.json
@@ -9,7 +9,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "uuid": "^8.1.0"
+    "uuidv4": "^6.1.0"
   },
   "devDependencies": {},
   "keywords": [],
